--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     box-sizing:border-box;
 }
 
-
+/* header */
 header{
     padding:15px;
     display:flex;
@@ -15,9 +15,11 @@ header{
     height:7vh;
 }
 
+/* Navbar */
 .logo img{
     width:170px;
 }
+
 .navbar ul{
     display:flex;
     justify-content:space-around;
@@ -77,6 +79,7 @@ header{
     cursor:pointer;
 }
 
+/* Section */
 section{
     display:flex;
     flex-wrap: wrap;
@@ -135,57 +138,85 @@ section .card:nth-child(3):hover{
     background-image:linear-gradient(rgba(8, 181, 250, 0.466),rgba(8, 181, 250, 0.466)),url('banner-03.jpg.webp');
 }
 
-.text2 ul{
+/* product heading */
+.product-h1{
+    font-size:4vmax; 
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    padding:10px 30px;
+}
+
+.navbar-product ul{
     display:flex;
     width:700px;
     justify-content:space-around;
     list-style:none;
 }
 
-.text2 ul li{
+.navbar-product  li{
     font-size:22px;
     color:rgb(97, 97, 97);
     padding:10px;
 }
 
-.text2 a{
+.navbar-product a{
     text-decoration: none;
 }
 
-.text2 ul li:hover{
+.navbar-product ul li:hover{
     color:black;
     transition:color 0.3s ease-in-out;
     cursor:pointer;
 }
 
-.container{
+/* Main */
+main{
+    margin:30px 0px;
     display:flex;
-    flex-wrap: wrap;
-    justify-content:space-around;
+    justify-content:space-evenly;
+    flex-wrap:wrap;
 }
 
-.container .product-card{
-    width:20%;
-    border:2px solid #ccc;
-    margin:20px;
-    box-shadow:0px 0px 6px rgba(0, 0, 0, 0.5);
+.product-card{
+    margin:10px 0px;
+    width:23%;
 }
 
 .product-card img{
     width:100%;
-    height:auto;
 }
 
-.container .product-card:hover{
-    transform:scale(1.05);
+.product-card img:hover{
+    transform:scale(1.03);
     transition:transform 0.3s ease-in-out;
     cursor:pointer;
 }
 
+.product-card h3{
+    padding:5px 5px;
+    font-size:20px;
+    color:rgb(126, 125, 125);
+}
+
+.product-card i{
+    float:right;
+}
+
+.product-card i:hover{
+    color:rgb(168, 4, 4);
+    transform:scale(1.1);
+    transition:transform 0.5s linear;
+}
+
+.product-card p{
+    padding:0px 5px;
+}
+
+/* loadmore button */
 .button{
     display:flex;
     justify-content: center;
     margin:50px 0px;
+
 }
 .button button{
     background-color:lightgrey;
@@ -199,13 +230,14 @@ section .card:nth-child(3):hover{
     cursor: pointer;
 }
 
+
 .button button:hover{
     background-color:black;
     border:2px solid black;
     color:white;
 }
 
-
+/* footer */
 footer{
     background-color:black;
     display:flex;
@@ -249,10 +281,10 @@ footer li a{
     padding:50px;
 }
 
-.footer-child:nth-child(3) img{
+.footer-child:nth-child(3) i{
     margin:20px 5px; 
-    width:40px;
-    height:auto;
+    font-size:30px;
+    color:white;
 }
 
 .footer-child:nth-child(4){
@@ -306,6 +338,11 @@ footer li a{
 .text p{
     font-size:60px;
 }
+
+/* Main */
+.product-card{
+    width:26%;
+}
 }
 
 /* MediaQueries of 870px */
@@ -330,10 +367,17 @@ footer li a{
     padding:50px 0px;
 }
 
-
 .footer-child:nth-child(4){
     width:25%;
     padding:0px 0px 50px 0px;
+}
+
+.product-card{
+    width:42%;
+}
+
+.product-card h3{
+    font-size:18px;
 }
 }
 
@@ -362,11 +406,9 @@ footer li a{
     font-size:80px;
 }
 
-
-.text2 ul{
+.navbar-product ul{
     width:600px;
 }
-
 
 footer li a{
     line-height:30px;
@@ -376,7 +418,6 @@ footer li a{
     width:50%;
     padding:30px 0px 0px 20px;
 }
-
 
 .footer-child:nth-child(2){
     width:50%;
@@ -405,7 +446,6 @@ footer li a{
 
 /* MediaQueries Of 650px */
 @media(max-width:650px){
-    
 header{
     justify-content:space-between;
 }
@@ -443,12 +483,12 @@ section .card{
     height:280px;
 }
 
-.text2 ul{
+.navbar-product ul{
     margin-left:20px;
     width:380px;
 }
 
-.text2 ul li{
+.navbar-product ul li{
     font-size:18px;
 }
 
@@ -460,7 +500,6 @@ footer li a{
     width:100%;
     padding:30px 0px 0px 20px;
 }
-
 
 .footer-child:nth-child(2){
     width:100%;
@@ -481,8 +520,14 @@ footer li a{
     padding:30px 0px 30px 20px;
 }
 
-
 .footer-child:nth-child(4) input{
     width:50%;
 }
+}
+
+/* Media Queries of 550px */
+@media(max-width:550px){
+.product-card{
+    width:60%;
+}        
 }
